Added a little cervela chef image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="img/cybercervela.png" height="95" style="border-radius: 50%;">
     <ul>
         <li><a href="recipes/ketocurry.html">Keto Curry</a></li>
         <li><a href="recipes/avocadotunasalad.html">Avocado Tuna Salad</a></li>
@@ -16,7 +17,10 @@
 
     <h2>Credit</h2>
     <p>Credit where credit is due! <br>
-    Content for the recipes was generated using <a href="https://chat.openai.com/chat">Chat GPT</a></p>
+    Content for the recipes was generated using <a href="https://chat.openai.com/chat">Chat GPT
+        <br>
+        And also the little cyber cervela chef picture you see on top!
+    </a></p>
     
 </body>
 </html>
