Removed a description that was in a link

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
     <h2>Credit</h2>
     <p>Credit where credit is due! <br>
     Content for the recipes was generated using <a href="https://chat.openai.com/chat">Chat GPT
-        <br>
-        And also the little cyber cervela chef picture you see on top!
     </a></p>
+    <p> (Including the little cyber cervela chef picture you see on top!)</p>
     
 </body>
 </html>
