Added css stylesheet to the project
Added a css folder and stylesheet and linked all html pages to this
stylesheet so I can only edit the style.css file from now on.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-</head>
+    <link rel="stylesheet" href="./css/style.css">
 <body>
     <h1>Odin Recipes</h1>
     <img src="img/cybercervela.png" height="95" style="border-radius: 50%;">
