--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="./css/style.css">
 <body>
-    <h1>Odin Recipes</h1>
+    <div>
+        <h1>Odin Recipes</h1>
+    </div>
+    
     <div class="container">
         <div class="container"> 
             <img class="profilepic" src="img/cybercervela.png">
